# autonomous_husky

./: CMakeLists.txt  README.md  package.xml
launch/: barc.launch  husky_road_world.launch
src/scripts/: LineDetection.py  PID.py  control_node.py  control_node_barc.py  line_detection_node.py  line_detection_node_node.py  publisher.py  subscriber.py
worlds/: _road.world  road.world  road_super.world
